feat: holobrawl modal done

--- a/index.html
+++ b/index.html
@@ -149,60 +149,60 @@
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Holo Brawl VR</div>
-                <img class="projectimage" src="projects/holobrawl/holobrawlgif.gif" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
+                <img class="projectimage" src="projects/holobrawl/holobrawlgif.gif">
                 <p class="easyreading projectinfo">
                     Oculus Quest board game using hand tracking. 
                     I'm currently developing it further as part of the Oculus Start Program!
                 </p>
             </div>           
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Collaborative Urban Virtual Environment (CURVE)</div>
-                <img class="projectimage" src="projects/pinboard.gif">
+                <img class="projectimage" src="projects/pinboard.gif" >
                 <p class="easyreading projectinfo">
                     Collaborative exploration of urban data in virtual reality 
                     using SteamVR. 
                 </p>
             </div>   
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Sine AR</div>
                 <img class="projectimage" src="projects/sine_ar.gif">
             </div>            
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Ray Tracer</div>
                 <img class="projectimage" src="projects/lights and balls cropped.jpg">
             </div>            
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Shaders</div>
                 <img class="projectimage" src="projects/shader/rainbow.gif">
             </div>   
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Tree Generation</div>
                 <img class="projectimage" src="projects/tree_generation.png">
             </div>            
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Insect Garden</div>
                 <img class="projectimage" src="projects/insects/bug_26.jpg">
             </div>   
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Walter Model & Rig</div>
                 <img class="projectimage" src="projects/model_rig.jpg">
             </div>   
         </div>
 
         <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
                 <img class="projectimage" src="projects/payload_picture.png">
             </div>            
-            <div class="galleryproject">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <div class="projecttext">Sketch Sage Studio</div>
                 <img class="projectimage" src="projects/sketchsage.png">
             </div>   
