fix: modal cursor

--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@
         <img class="pageimage" src="house.gif"/>
         <div class='date-time'><span></span>.</div>
         <div class="divider">*</div>
-
-        <div class="info">
-            <div class="easyreading">
+        <!--WHAT if I just put a timeline like linked in?-->
+        <div class="info easyreading">
                 <p>
-                    I'm Lea Broudo, a software engineer from New York.
+                    Hello! Welcome to  <i>Lea's World</i>. I first built this site so that others could learn more about me,
+                    but I like to also keep it as a personal record of what I've made over the years.
                 </p>
                 <p>
-                    Between 2014 and 2018 I taught myself to draw portraits, since I was interested in
-                    being able to capture people's likeness on one page. After portraits, I began to
+                    Before I let you look at my work since highschool, let me first introduce myself. 
+                    I'm Lea Broudo, a software engineer from New York. I've worked on a range of projects,
+                    some of which I've included on this site. 
+                </p>
+                <p>
+                    Between 2014 and 2018 I mainly taught myself to draw portraits, since I was interested in
+                    being able to capture people's likeness. After portraits, I began to
                     work on larger and more surreal scenes, as well as branch off into other mediums like
                     embroidery and pottery. You can check out some of my work here. 
                 </p>
@@ -55,7 +60,10 @@
                     and worked on VR projects at Steven Feiner's Computer Graphics and User Interfaces Lab.  
                     
                 </p>
-            </div>
+                <p>
+                    Since then, I've been working on an Oculus Quest game, Holo Brawl, through the Oculus Start Program.   
+                    
+                </p>
         </div>
 
     </div>
