feat: working modal switching

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 </div>
                 <img class="modal-img" src=""/>
                 <div class="modal-body easyreading">
+                    <!-- Holo Brawl -->
                     <div class="modal-meat" id="holobrawl">
                         <p>
                             HoloBrawl is a VR board game that allows players to personally interact with their pieces. 
@@ -103,7 +104,7 @@
                         </p>
                         <div class="galleryrow"> 
                             <div class="modal-video-item">
-                                <video class="modal-video" muted autoplay controls>
+                                <video class="modal-video" muted autoplay controls loop>
                                     <source src="projects/holobrawl/HoloBrawlAlphaUI.mp4" type="video/mp4">
                                 </video>
                                 <p class="modal-item-info">
@@ -111,7 +112,125 @@
                                 </p>
                             </div>
                             <div class="modal-video-item">
-                                <video class="modal-video" muted autoplay controls>
+                                <video class="modal-video" muted autoplay controls loop>
+                                    <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
+                                </video>
+                                <p class="modal-item-info">
+                                    Gameplay
+                                </p>
+                            </div>
+                        </div>
+                        <div class="galleryrow" id="portrait">
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/using-ui.png" />
+                                <p class="modal-item-info">
+                                    using the game's user interface
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/pieces-puching.png" />
+                                <p class="modal-item-info">
+                                    Pieces punching eachother
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/piecing-fighting.png" />
+                                <p class="modal-item-info">
+                                    Pieces fighting eachother
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/placing-piece-to-attack.png" />
+                                <p class="modal-item-info">
+                                    Player placing their piece to attack opponent
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/placing-piece.png" />
+                                <p class="modal-item-info">
+                                    Player moving their piece
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- CURVE -->
+                    <div class="modal-meat" id="curve">
+                        <p>
+                            sineAR is an augmented reality app that allows users to learn about acoustic waves through creating 
+                            and modifying spatial audio ensembles. With step-by-step tutorials and multiple methods of interaction, 
+                            users quickly and immersively create sounds in their AR environment and experience how modifying 
+                            frequency and amplitude leads to an interesting new world of sound.
+                        </p>
+                        <div class="galleryrow"> 
+                            <div class="modal-video-item">
+                                <video class="modal-video" muted autoplay controls loop>
+                                    <source src="projects/holobrawl/HoloBrawlAlphaUI.mp4" type="video/mp4">
+                                </video>
+                                <p class="modal-item-info">
+                                    User Interface
+                                </p>
+                            </div>
+                            <div class="modal-video-item">
+                                <video class="modal-video" muted autoplay controls loop>
+                                    <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
+                                </video>
+                                <p class="modal-item-info">
+                                    Gameplay
+                                </p>
+                            </div>
+                        </div>
+                        <div class="galleryrow" id="portrait">
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/using-ui.png" />
+                                <p class="modal-item-info">
+                                    using the game's user interface
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/pieces-puching.png" />
+                                <p class="modal-item-info">
+                                    Pieces punching eachother
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/piecing-fighting.png" />
+                                <p class="modal-item-info">
+                                    Pieces fighting eachother
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/placing-piece-to-attack.png" />
+                                <p class="modal-item-info">
+                                    Player placing their piece to attack opponent
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/placing-piece.png" />
+                                <p class="modal-item-info">
+                                    Player moving their piece
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- SineAR -->
+                    <div class="modal-meat" id="sinear">
+                        <p>
+                            sineAR is an augmented reality app that allows users to learn about acoustic waves through creating 
+                            and modifying spatial audio ensembles. With step-by-step tutorials and multiple methods of interaction, 
+                            users quickly and immersively create sounds in their AR environment and experience how modifying 
+                            frequency and amplitude leads to an interesting new world of sound.
+                        </p>
+                        <div class="galleryrow"> 
+                            <div class="modal-video-item">
+                                <video class="modal-video" muted autoplay controls loop>
+                                    <source src="projects/holobrawl/HoloBrawlAlphaUI.mp4" type="video/mp4">
+                                </video>
+                                <p class="modal-item-info">
+                                    User Interface
+                                </p>
+                            </div>
+                            <div class="modal-video-item">
+                                <video class="modal-video" muted autoplay controls loop>
                                     <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
                                 </video>
                                 <p class="modal-item-info">
@@ -165,7 +284,7 @@
                     I'm currently developing it further as part of the Oculus Start Program!
                 </p>
             </div>           
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Collaborative Urban Virtual Environment (CURVE)', null, 'curve')">
                 <div class="projecttext">Collaborative Urban Virtual Environment (CURVE)</div>
                 <img class="projectimage" src="projects/pinboard.gif" >
                 <p class="easyreading projectinfo">
@@ -173,8 +292,8 @@
                     using SteamVR. 
                 </p>
             </div>   
-            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
-                <div class="projecttext">Sine AR</div>
+            <div class="galleryproject" onclick="openModal(event, 'projectModal', 'SineAR', null, 'sinear')">
+                <div class="projecttext">SineAR</div>
                 <img class="projectimage" src="projects/sine_ar.gif">
             </div>            
         </div>
